# easyRag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
src/easyrag/: cli.py  config.py
src/easyrag/db/: models.py  session.py
src/easyrag/ingest/: __init__.py  chunker.py  extractor.py  pipeline.py  prompts.py
src/easyrag/llm/: client.py  embeddings.py
src/easyrag/query/: __init__.py  pipeline.py  prompts.py  resolver.py  retrieval.py
src/easyrag/wiki/: __init__.py  backlinker.py  markdown.py  merge_utils.py  repository.py  sanitize.py  slug.py
tests/: conftest.py  test_backlinker.py  test_ingest.py  test_query.py  test_resolver.py  test_smoke.py  test_wiki_markdown.py  test_wiki_sanitize.py
tests/fixtures/: sample_contract.txt  sample_contract_2.txt
